maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:48: error: ')' expected but '}' found.
}
^